--- a/app/src/main/res/layout/fragment_act3_frag1_all_menu.xml
+++ b/app/src/main/res/layout/fragment_act3_frag1_all_menu.xml
@@ -22,7 +22,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="#65F5F7FA"
+            android:background="#AE45474A"
             app:layout_constraintBottom_toBottomOf="@+id/restaurantPhoto"
             app:layout_constraintEnd_toEndOf="@+id/restaurantPhoto"
             app:layout_constraintStart_toStartOf="@+id/restaurantPhoto"
@@ -44,7 +44,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="@color/design_default_color_primary_variant"
+            android:textColorHint="@color/colorSecondary"
+            android:hint="@string/search"
             app:layout_constraintEnd_toEndOf="@id/guidelineRight"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView" />
@@ -53,7 +54,7 @@
             android:src="@drawable/ic_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#000000"
+            android:background="#00000000"
             app:layout_constraintBottom_toBottomOf="@+id/editText"
             app:layout_constraintEnd_toEndOf="@+id/editText"
             app:layout_constraintTop_toTopOf="@+id/editText" />
@@ -63,7 +64,7 @@
             android:layout_height="wrap_content"
             android:text="Bon Appetit"
             android:layout_marginTop="8dp"
-            android:textColor="@color/design_default_color_primary"
+            android:textColor="@color/colorPrimary"
             android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/editText"
@@ -246,6 +247,14 @@
             </LinearLayout>
 
         </ScrollView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/payment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_payment"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineBotton"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
