Se agregan pantallas para seleccionar el tipo de login y pantalla para hacer el login, se agregan tambien las configuraciones de firebase y alguno de los iconos e imagenes para usar en el proyecto

--- a/app/src/main/res/layout/fragment_act3_frag1_all_menu.xml
+++ b/app/src/main/res/layout/fragment_act3_frag1_all_menu.xml
@@ -30,7 +30,7 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/pizzaIcon"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="35dp"
@@ -47,8 +47,8 @@
             android:textColorHint="@color/colorSecondary"
             android:hint="@string/search"
             app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView" />
+            app:layout_constraintStart_toEndOf="@+id/pizzaIcon"
+            app:layout_constraintTop_toTopOf="@+id/pizzaIcon" />
 
         <ImageButton
             android:src="@drawable/ic_search"
