--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -9,4 +9,26 @@
         <item name="android:typeface">normal</item>
     </style>
 
+    <style name="buttom_line">
+        <item name="android:backgroundTint">@color/colorPrimaryVariant</item>
+        <item name="android:layout_margin">32dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">256dp</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="edit_text_login">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textCursorDrawable">@color/colorPrimaryVariant</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="icon_arrow">
+        <item name="android:layout_width">320dp</item>
+        <item name="android:layout_height">16dp</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:src">@drawable/iconarrow</item>
+    </style>
+
 </resources>
