--- a/app/src/main/res/layout/activity_act13_register.xml
+++ b/app/src/main/res/layout/activity_act13_register.xml
@@ -6,4 +6,184 @@
     android:layout_height="match_parent"
     tools:context=".Act1_3Register">
 
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/logo_app"
+        android:layout_width="144dp"
+        android:layout_height="148dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iconopizza" />
+
+    <ScrollView
+        android:id="@+id/scrollView_register"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/logo_app"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            >
+            <TextView
+                android:id="@+id/textView_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="28dp"
+                android:text="@string/textView_register"
+                android:textSize="34sp"
+                android:textColor="@color/colorPrimary"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/logo_app" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInput_name"
+                style="@style/text_input_register"
+                android:hint="@string/text_name"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textView_register"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:boxBackgroundColor="@color/colorSecondary"
+                >
+
+                <EditText
+                    android:id="@+id/editText_name_register"
+                    style="@style/edit_text_login"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInput_emailUpdate"
+                style="@style/text_input_register"
+                android:hint="@string/text_user"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textInput_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:boxBackgroundColor="@color/colorSecondary"
+                >
+
+                <EditText
+                    android:id="@+id/editText_emailUpdate"
+                    style="@style/edit_text_login" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInput_user"
+                style="@style/text_input_register"
+                android:hint="@string/text_email"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textInput_emailUpdate"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:boxBackgroundColor="@color/colorSecondary"
+                >
+
+                <EditText
+                    android:id="@+id/editText_email_register"
+                    style="@style/edit_text_login"
+                    android:inputType="textEmailAddress"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInput_password"
+                style="@style/text_input_register"
+                android:hint="@string/text_password"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textInput_user"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:boxBackgroundColor="@color/colorSecondary"
+                app:endIconMode="password_toggle"
+                >
+
+                <EditText
+                    android:id="@+id/editText_password_register"
+                    style="@style/edit_text_login"
+                    android:inputType="textPassword"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInput_phone"
+                style="@style/text_input_register"
+                android:hint="@string/text_phone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textInput_password"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:boxBackgroundColor="@color/colorSecondary"
+                >
+
+                <EditText
+                    android:id="@+id/editText_phone_register"
+                    style="@style/edit_text_login"
+                    android:inputType="number"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/textView_terms"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/text_read_terms"
+                android:textSize="14sp"
+                android:textColor="@color/colorPrimary"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText_phone"
+                android:clickable="true"/>
+
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/check_register"
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textView_terms"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="4dp"
+                android:textColor="@color/colorSecondary"
+                android:text="@string/text_accept_terms"
+                android:buttonTint="@color/colorPrimaryVariant"
+                />
+
+            <ImageView
+                android:id="@+id/icon_arrow"
+                style="@style/icon_arrow"
+                android:layout_marginTop="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/check_register" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_register_user"
+                style="@style/buttom_register"
+                app:cornerRadius="4dp"
+                android:layout_margin="32dp"
+                app:layout_constraintTop_toBottomOf="@id/textInput_phone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text="@string/text_btnRegistrarse"
+                />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
