--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -31,4 +31,24 @@
         <item name="android:src">@drawable/iconarrow</item>
     </style>
 
+<!--    Agregados por Janner-->
+    <style name="text_input_register">
+        <item name="android:layout_marginStart">32dp</item>
+        <item name="android:layout_marginEnd">32dp</item>
+        <item name="android:layout_marginTop">32dp</item>
+        <item name="android:layout_width">256dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="buttom_register">
+        <item name="android:backgroundTint">@color/colorPrimaryVariant</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">176dp</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
+
+
+
 </resources>
