--- a/app/src/main/res/layout/activity_act12_login.xml
+++ b/app/src/main/res/layout/activity_act12_login.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Act1_2Login">
+
     <ImageView
         android:id="@+id/banner"
         android:layout_width="414dp"
@@ -59,6 +61,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="30dp"
         android:hint="Email"
+        android:text="@={viewModel.user}"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,6 +78,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:hint="Password"
+        android:text="@={viewModel.password}"
         android:inputType="numberPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,6 +95,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/btn_line"
         android:text="Ingresar"
+        android:onClick="@{() -> viewModel.login()}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
