--- a/app/src/main/res/layout/activity_act13_register.xml
+++ b/app/src/main/res/layout/activity_act13_register.xml
@@ -4,6 +4,188 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Act1_3Register">
+    tools:context=".Act1_2Login">
+    <ImageView
+        android:id="@+id/banner"
+        android:layout_width="414dp"
+        android:layout_height="137dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/colorPrimaryVariant"/>
+
+
+    <ImageView
+        android:id="@+id/pizzaIcon"
+        android:layout_width="159dp"
+        android:layout_height="123dp"
+        android:layout_marginTop="76dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/iconopizza"/>
+
+    <TextView
+        android:id="@+id/titleScreen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:fontFamily="sans-serif"
+        android:text="Register"
+        android:textColor="#000000"
+        android:textSize="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pizzaIcon" />
+
+    <ScrollView
+        android:id="@+id/scrollView_register"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/titleScreen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        >
+            <EditText
+                android:id="@+id/editText_name"
+                style="@style/edit_text_login"
+                android:layout_width="314dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="30dp"
+                android:hint="Nombre"
+                android:inputType="textEmailAddress"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/titleScreen"
+                app:layout_constraintVertical_bias="0.022" />
+
+
+            <EditText
+                android:id="@+id/editText_userName"
+                style="@style/edit_text_login"
+                android:layout_width="314dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:hint="Nombre de ususario"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText_name"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <EditText
+                android:id="@+id/editText_email"
+                style="@style/edit_text_login"
+                android:layout_width="314dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:hint="Email"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText_userName"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <EditText
+                android:id="@+id/editText_password"
+                style="@style/edit_text_login"
+                android:layout_width="314dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:hint="Contraseña"
+                app:endIconMode="password_toggle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText_email"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <EditText
+                android:id="@+id/editText_phone"
+                style="@style/edit_text_login"
+                android:layout_width="314dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:hint="Numero de telefono"
+                android:inputType="number"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText_password"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/textView_terms"
+                android:layout_width="314dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Terminos y Condiciones"
+                android:textSize="14sp"
+                android:textColor="@color/colorPrimaryVariant"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText_phone"
+                android:clickable="true"/>
+
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/check_register"
+                android:layout_width="314dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textView_terms"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="4dp"
+                android:textColor="@color/colorPrimaryVariant"
+                android:text="Acepto Terminos y Condiciones"
+                android:buttonTint="@color/colorSecondary"
+                />
+
+
+
+
+            <Button
+                android:id="@+id/btnRegister"
+                android:layout_width="314dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/btn_line"
+                android:text="Registarse"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText_password"
+                app:layout_constraintVertical_bias="0.0" />
+
+
+
+            <ImageView
+                android:id="@+id/icon_arrow"
+                style="@style/icon_arrow"
+                android:layout_marginTop="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView_pass_recover"
+                app:layout_constraintVertical_bias="0.0" />
+
+
+
+         </LinearLayout>
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
