--- a/app/src/main/res/layout/activity_act11_before_login.xml
+++ b/app/src/main/res/layout/activity_act11_before_login.xml
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/iconopizza" />
+        android:src="@drawable/iconopizza" />
 
     <TextView
         android:id="@+id/titleScreen"
@@ -46,7 +46,7 @@
         android:layout_margin="16dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/btn_line"
-        android:text="Button"
+        android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         app:layout_constraintVertical_bias="0.251" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/registerbtn"
         android:layout_width="343dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/invitebtn"
         android:layout_width="343dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
@@ -76,6 +76,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/registerbtn"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
