--- a/app/src/main/res/layout/activity_act12_login.xml
+++ b/app/src/main/res/layout/activity_act12_login.xml
@@ -25,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/iconopizza" />
+        android:src="@drawable/iconopizza" />
 
     <TextView
         android:id="@+id/titleScreen"
