Se agrega registro de usuarios con email en firebase

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="colorSecondaryVariant">#C43E00</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="red">#c90606</color>
+    <color name="green">#008000</color>
 </resources>
