--- a/app/src/main/res/layout/fragment_act3_frag1_all_menu.xml
+++ b/app/src/main/res/layout/fragment_act3_frag1_all_menu.xml
@@ -51,19 +51,21 @@
             app:layout_constraintTop_toTopOf="@+id/pizzaIcon" />
 
         <ImageButton
-            android:src="@drawable/ic_search"
+            android:id="@+id/imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#00000000"
+            android:src="@drawable/ic_search"
             app:layout_constraintBottom_toBottomOf="@+id/editText"
             app:layout_constraintEnd_toEndOf="@+id/editText"
             app:layout_constraintTop_toTopOf="@+id/editText" />
 
         <TextView
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bon Appetit"
             android:layout_marginTop="8dp"
+            android:text="Bon Appetit"
             android:textColor="@color/colorPrimary"
             android:textSize="28sp"
             android:textStyle="bold"
@@ -105,13 +107,13 @@
             app:layout_constraintBottom_toBottomOf="@id/guidelineBotton"
             app:layout_constraintEnd_toEndOf="@id/guidelineRight"
             app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/restaurantPhoto">
+            app:layout_constraintTop_toBottomOf="@+id/textView3">
 
             <LinearLayout
-                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="8dp">
 
                 <TextView
                     android:id="@+id/oneTV"
@@ -253,20 +255,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_payment"
-            app:layout_constraintBottom_toTopOf="@+id/guidelineBotton"
+            app:elevation="0dp"
+            android:backgroundTint="#00008000"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:elevation="0dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+        <Button
+            android:id="@+id/buttonOrder"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Mi orden"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />
 
         <TextView
             android:id="@+id/IndicatorItemsAddToPay"
-            android:layout_margin="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
             android:text="0"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:textColor="@color/colorPrimary"
             android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@+id/payment"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintTop_toTopOf="@+id/payment" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
