Agregando compartir en Facebook y terminando en metodo de pago ocn conekta.

--- a/app/src/main/res/layout/fragment_act3_frag4_payment.xml
+++ b/app/src/main/res/layout/fragment_act3_frag4_payment.xml
@@ -120,7 +120,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Pagar con tarjeta"
+            android:text="Pagar con Conekta"
             android:backgroundTint="@color/green"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
