--- a/app/src/main/res/layout/activity_act4_conekta.xml
+++ b/app/src/main/res/layout/activity_act4_conekta.xml
@@ -29,13 +29,34 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp">
 
+                <ImageView
+                    android:id="@+id/banner"
+                    android:layout_width="414dp"
+                    android:layout_height="137dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:background="@color/colorPrimaryVariant"/>
+
+
+                <ImageView
+                    android:id="@+id/pizzaIcon"
+                    android:layout_width="159dp"
+                    android:layout_height="123dp"
+                    android:layout_marginTop="76dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:src="@drawable/iconopizza" />
+
                 <TextView
                     android:id="@+id/txvTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="CONEKTA"
+                    android:text="Realizar Pago"
                     android:textSize="25sp"
                     android:textStyle="bold"
+                    android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +77,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txvTitle">
+                    app:layout_constraintTop_toBottomOf="@+id/pizzaIcon">
 
                     <TextView
                         android:id="@+id/textView"
@@ -200,67 +221,18 @@
                         app:layout_constraintTop_toTopOf="@+id/textView3" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:id="@+id/outputViewData"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/constraintCard"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="8dp"
-                    android:gravity="center"
-                    android:text="@string/outputData"
-                    android:textColor="#E50695"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/constraintCard" />
 
-                <TextView
-                    android:id="@+id/outputView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/outputViewData"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:gravity="center"
-                    android:text="@string/outputTokenData"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="19sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.501"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/outputViewData" />
-
-                <TextView
-                    android:id="@+id/uuidDevice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/outputView"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:gravity="center"
-                    android:text="@string/outputUUIDData"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="19sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/outputView" />
 
                 <Button
                     android:id="@+id/btnTokenize"
                     android:layout_width="0dp"
                     android:layout_height="70dp"
-                    android:text="TOKENIZE"
+                    android:text="Procesar Pago"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/uuidDevice"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintCard"
                     app:layout_constraintVertical_bias="0.06" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
