--- a/app/src/main/res/layout/fragment_act3_frag1_all_menu.xml
+++ b/app/src/main/res/layout/fragment_act3_frag1_all_menu.xml
@@ -18,16 +18,12 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <include layout="@layout/scene_one" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="#AE45474A"></LinearLayout>
         </FrameLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="#AE45474A"
-            app:layout_constraintBottom_toBottomOf="@+id/restaurantPhoto"
-            app:layout_constraintEnd_toEndOf="@+id/restaurantPhoto"
-            app:layout_constraintStart_toStartOf="@+id/restaurantPhoto"
-            app:layout_constraintTop_toTopOf="@+id/restaurantPhoto">
-        </LinearLayout>
 
         <ImageView
             android:id="@+id/pizzaIcon"
@@ -39,26 +35,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:textColorHint="@color/colorSecondary"
-            android:hint="@string/search"
-            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-            app:layout_constraintStart_toEndOf="@+id/pizzaIcon"
-            app:layout_constraintTop_toTopOf="@+id/pizzaIcon" />
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00000000"
-            android:src="@drawable/ic_search"
-            app:layout_constraintBottom_toBottomOf="@+id/editText"
-            app:layout_constraintEnd_toEndOf="@+id/editText"
-            app:layout_constraintTop_toTopOf="@+id/editText" />
 
         <TextView
             android:id="@+id/textView3"
@@ -67,11 +43,11 @@
             android:layout_marginTop="8dp"
             android:text="Bon Appetit"
             android:textColor="@color/colorPrimary"
-            android:textSize="28sp"
+            android:textSize="32sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/editText"
-            app:layout_constraintStart_toStartOf="@+id/editText"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
+            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+            app:layout_constraintStart_toEndOf="@+id/pizzaIcon"
+            app:layout_constraintTop_toTopOf="@+id/pizzaIcon"  />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineLeft"
@@ -107,7 +83,7 @@
             app:layout_constraintBottom_toBottomOf="@id/guidelineBotton"
             app:layout_constraintEnd_toEndOf="@id/guidelineRight"
             app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/textView3">
+            app:layout_constraintTop_toBottomOf="@+id/restaurantPhoto">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -258,7 +234,7 @@
             app:elevation="0dp"
             android:backgroundTint="#00008000"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <Button
             android:id="@+id/buttonOrder"
